add sport to team
