# src/modules/team/useCases/CreateTeam/CreateTeamController.ts
@@ -5,7 +5,7 @@ import { CreateTeamUseCase } from './CreateTeamUseCase';
 
 export class CreateTeamController {
   async handle(request: Request, response: Response): Promise<Response> {
-    const { name, description, createdBy } = request.body;
+    const { name, description, createdBy, sportId } = request.body;
 
     const createTeamUseCase = container.resolve(CreateTeamUseCase);
 
@@ -13,6 +13,7 @@ export class CreateTeamController {
       name,
       description,
       createdBy,
+      sportId,
     });
 
     return response.status(201).json(category);
